Alignment bug (#920)
* Update bookmark icon (#902)

* Replace apple icon with yale icon

* Make links relative

* add facet field so search builder works with iiif_search (#904)

* Resize to 120x120 to match size specified in the link element. (#905)

* edit header dropdown (#908)




* 2543 add contributor field (#909)

* adds contributor information to metadata description block

* filter for aspace

---------


* Bump semver from 5.7.1 to 5.7.2 (#907)

Bumps [semver](https://github.com/npm/node-semver) from 5.7.1 to 5.7.2.
- [Release notes](https://github.com/npm/node-semver/releases)
- [Changelog](https://github.com/npm/node-semver/blob/v5.7.2/CHANGELOG.md)
- [Commits](https://github.com/npm/node-semver/compare/v5.7.1...v5.7.2)

---
updated-dependencies:
- dependency-name: semver
  dependency-type: indirect
...


* realign bookmark checkboxes

---------

--- a/app/assets/stylesheets/customOverrides/search_result.scss
+++ b/app/assets/stylesheets/customOverrides/search_result.scss
@@ -311,21 +311,30 @@ BOOKMARK STYLING
 }
 
 // List item search results bookmark styling
-.bookmark-toggle {
-  padding-left: 200px;
+.index_title.document-title-heading.title_tesim {
+  display: flex;
 }
-@media screen and (max-width: 1600px) {
-  .bookmark-toggle {
-    padding-left: 100px;
+
+.index-document-functions { 
+  padding-left: 175px;
+}
+
+.bookmark-toggle {
+  font-size: 17px;
+}
+
+@media screen and (max-width: 1650px) {
+  .index-document-functions {
+    padding-left: 90px;
   }
 }
-@media screen and (max-width: 1440px) {
-  .bookmark-toggle {
+@media screen and (max-width: 1530px) {
+  .index-document-functions {
     padding-left: 0px;
   }
 }
-@media screen and (max-width: 1275px) {
-  .bookmark-toggle {
-    margin-left: -10px;
+@media screen and (max-width: 1380px) {
+  .index-document-functions {
+    margin-left: -105px;
   }
 }
